Use props to pass width/height data down to components

--- a/src/components/App/App.vue.html
+++ b/src/components/App/App.vue.html
@@ -1,6 +1,6 @@
 <div id="app">
-  <DffPlot />
-  <ROIPlot />
+  <DffPlot :width="width / 2" :height="height" />
+  <ROIPlot :width="width / 2" :height="height" />
 
   <input type="radio" id="selection" value="selection" v-model="mode">
   <label for="selection">Selection Mode</label>
