--- a/src/components/DffPlot/DffPlot.vue.html
+++ b/src/components/DffPlot/DffPlot.vue.html
@@ -1,3 +1,3 @@
 <div style="float:left;">
-  <svg width="512" height="512" xmlns="http://www.w3.org/2000/svg"></svg>
+  <svg :width="width" :height="height" xmlns="http://www.w3.org/2000/svg"></svg>
 </div>
