--- a/src/components/ROIPlot/ROIPlot.vue.html
+++ b/src/components/ROIPlot/ROIPlot.vue.html
@@ -1,3 +1,3 @@
 <div style="float:left;">
-  <canvas v-bind:width="width" v-bind:height="height" v-on:click="click"></canvas>
+  <canvas ref="canvas" v-bind:width="width" v-bind:height="height" v-on:click="click"></canvas>
 </div>
