Use standardized custom element names for components

--- a/src/components/App/App.vue.html
+++ b/src/components/App/App.vue.html
@@ -1,6 +1,6 @@
 <div>
-  <DffPlot :width="width / 2" :height="height" />
-  <ROIPlot :width="width / 2" :height="height" />
+  <dff-plot :width="width / 2" :height="height" />
+  <roi-plot :width="width / 2" :height="height" />
 
   <input type="radio" id="selection" value="selection" v-model="mode">
   <label for="selection">Selection Mode</label>
