Use v-on to handle click event for button

--- a/src/components/App/App.vue.html
+++ b/src/components/App/App.vue.html
@@ -14,7 +14,7 @@
     <span>Time index: {{ Math.floor(timeIndex * 56.8025987006) }}</span>
   </div>
   <br>
-  <button id="clear">
+  <button v-on:click="clearSelection">
     Clear selection
   </button>
 </div>
